# bubble_features_extraction

./: .gitignore  README.md  bubble_feature_notebook.ipynb  pyproject.toml
models/: froth_classifier.pkl
